--- a/translations/kangyur/translations/072-030_toh330-the_shorter_devata_sutra.xml
+++ b/translations/kangyur/translations/072-030_toh330-the_shorter_devata_sutra.xml
@@ -24,7 +24,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-030-195">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.7 <date>2024</date>
+                <edition>v 1.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -181,6 +181,9 @@
                     <desc>Glossary integration revised, activated in CG</desc>
                 </change>
                 <change who="#martina-cotter" when="2024-05-29T07:25:14.59Z" type="text-version" status="1.0.7" xml:id="UT22084-072-030-209">
+                    <desc>updated pending links.</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-05-29T14:11:11.074Z" type="text-version" status="1.0.8" xml:id="UT22084-072-030-210">
                     <desc>updated pending links.</desc>
                 </change>
                         </revisionDesc>
@@ -454,7 +457,7 @@
                                                   being’s appearance, the whole of Jetavana became
                                                   filled with exalted splendor”). This accords with
                                                   the framing narrative of <title xml:lang="en">
-                                <ref rend="pending" target="http://read.84000.co/translation/toh329.html">The Devatā Sūtra</ref>
+                                <ref target="http://read.84000.co/translation/toh329.html">The Devatā Sūtra</ref>
                             </title> (Toh 329).</note> Thereupon the divine being asked
                                                 the Blessed One:<note place="end" xml:id="UT22084-072-030-79"> Skt. (Mat.) reads
                                                   <foreign xml:lang="Sa-Ltn" type="quote">sā devatā
@@ -624,7 +627,7 @@
                                                   final verse is uttered by the <foreign xml:lang="Sa-Ltn" type="term">devatā</foreign>. It
                                                   also corresponds loosely with the final verse
                                                   spoken by the <foreign xml:lang="Sa-Ltn" type="term">devatā</foreign> in <title xml:lang="en">The Devatā Sūtra</title> (Toh
-                                                        329)<ref inst="untoggle comment for following ptr tag" rend="pending" target="http://read.84000.co/translation/toh329.html"/><!--<ptr target="#UT22084-072-029-111"/>-->: <foreign xml:lang="Sa-Ltn" type="quote">cirasya bata
+                                                        329) <ptr target="#UT22084-072-029-111"/>: <foreign xml:lang="Sa-Ltn" type="quote">cirasya bata
                                                   paśyāmi brāhmaṇaṃ parinirvṛtam
                                                   sarvavairabhayātītaṃ tīrṇaṃ loke
                                                   viṣaktikām</foreign> (“Oh! After a long time, I
