--- a/translations/kangyur/translations/062-005_toh205-the_city_beggar_woman.xml
+++ b/translations/kangyur/translations/062-005_toh205-the_city_beggar_woman.xml
@@ -27,7 +27,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-062-005-204">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -161,6 +161,9 @@
                 </change>
                 <change who="#konchog" when="2024-05-29T15:22:38.049Z" type="text-version" status="1.0.1" xml:id="UT22084-062-005-209">
                     <desc>A couple of typos fixed.</desc>
+                </change>
+                <change who="#john" when="2024-05-30T12:53:35.194Z" type="text-version" status="1.0.2" xml:id="UT22084-062-005-210">
+                    <desc>Edited first line of 1.17 and associated note.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -489,14 +492,15 @@
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-062-005-116"/>
                     <lg tid="40">
-                        <tei:l xmlns:tei="http://www.tei-c.org/ns/1.0">“This buddha exemplary tale will delight the faithful<note place="end" xml:id="UT22084-062-005-117">
+                        <tei:l xmlns:tei="http://www.tei-c.org/ns/1.0">“This exemplary tale about a future buddha will delight the faithful<note place="end" xml:id="UT22084-062-005-117">
                                 <tei:foreign xml:lang="Bo-Ltn" type="quote">sangs rgyas rtogs pa brjod
                                     pa yi ni dad rnams rab dga’ byed</tei:foreign>. In light of the Stok
                                 Palace version, which reads <tei:foreign xml:lang="Bo-Ltn" type="quote">sangs rgyas rtogs pa brjod pa’i ming ni dad rnams rab dga’
-                                    byed</tei:foreign>, “the <emph>name</emph> of [this] buddha exemplary tale
-                                will delight the faithful,” we have opted to read <tei:foreign xml:lang="Bo-Ltn" type="quote">yi</tei:foreign> as <tei:foreign xml:lang="Bo-Ltn" type="term">yis</tei:foreign>, as Skilling does.
+                                    byed</tei:foreign>, “the <emph>name</emph> of [this] exemplary tale about a future buddha
+                                will delight the faithful,” we have opted to read <tei:foreign xml:lang="Bo-Ltn" type="quote">yi</tei:foreign> as 
+                            <tei:foreign xml:lang="Bo-Ltn" type="term">yis</tei:foreign>, as Skilling does.
                                 Otherwise, an alternative translation could be “She will delight
-                                those who have faith in buddha exemplary tales.” This would preserve the
+                                those who have faith in exemplary tales about future buddhas.” This would preserve the
                                 subject of <tei:foreign xml:lang="Bo-Ltn" type="quote">byed</tei:foreign>
                                 repeated from previous lines. </note>
                         </tei:l>
