--- a/translations/kangyur/translations/066-012_toh254-the_sutra_of_dharmaketu.xml
+++ b/translations/kangyur/translations/066-012_toh254-the_sutra_of_dharmaketu.xml
@@ -5,35 +5,31 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en" key="toh254">The Sūtra of Dharmaketu</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn" key="toh254">Dharmaketusūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn" key="toh254">Dharmaketu­sūtra</title>
                 <title type="mainTitle" xml:lang="bo" key="toh254">ཆོས་ཀྱི་རྒྱལ་མཚན་གྱི་མདོ།</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn" key="toh254">chos kyi rgyal mtshan gyi mdo</title>
                 <title type="longTitle" xml:lang="en" key="toh254">The Noble Mahāyāna Sūtra of Dharmaketu</title>
-                <title type="longTitle" xml:lang="Sa-Ltn" key="toh254">Āryadharmaketumahāyānasūtra</title>
+                <title type="longTitle" xml:lang="Sa-Ltn" key="toh254">Ārya­dharma­ketu­mahā­yāna­sūtra</title>
                 <title type="longTitle" xml:lang="bo" key="toh254">འཕགས་པ་ཆོས་ཀྱི་རྒྱལ་མཚན་གྱི་མདོ་ཐེག་པ་ཆེན་པོའོ།</title>
                 <title type="longTitle" xml:lang="Bo-Ltn" key="toh254">’phags pa chos kyi rgyal mtshan gyi mdo theg pa chen po’o</title>
                 <title type="otherTitle" xml:lang="en" key="toh254">The Mahāyāna Sūtra “Dharmaketu’s Question”</title>
                 <title type="otherTitle" xml:lang="en" key="toh254">The Noble Sūtra of Dharmaketu</title>
-                <title type="otherTitle" xml:lang="en" key="toh254">The Noble Mahāyāna Sūtra “Dharmaketudhvaja’s Question”</title>
+                <title type="otherTitle" xml:lang="en" key="toh254">The Noble Mahāyāna Sūtra “Dharmaketu­dhvaja’s Question”</title>
                 <title type="otherTitle" xml:lang="en" key="toh254">Dharmaketu’s Question</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn" key="toh254">Āryadharmaketudhvajaparipṛcchānāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn" key="toh254">Ārya­dharma­ketu­dhvaja­paripṛcchā­nāma­mahā­yāna­sūtra</title>
                 <title type="otherTitle" xml:lang="bo" key="toh254">chos kyi rgyal mtshan gyis zhus pa</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn" key="toh254">’phag pa chos kyi rgyal mtshan gyis zhus pa zhes bya ba theg pa chen po’i mdo</title>
-                <author role="translatorMain" xml:id="UT22084-066-012-1">Translated by Bhikṣuṇī Thubten Damcho and
-                    team<lb/> under the
-                    patronage and supervision of 84000: Translating the Words of the Buddha</author>
-                <consultant role="projectManager" xml:id="UT22084-066-012-2">Bhikṣuṇī Thubten
-                    Damcho</consultant>
-                <author role="translatorEng" xml:id="UT22084-066-012-3">Bhikṣuṇī Thubten
-                    Damcho</author>
+                <consultant role="projectManager" xml:id="UT22084-066-012-2">Bhikṣuṇī Thubten Damcho</consultant>
+                <author role="translatorEng" xml:id="UT22084-066-012-3">Bhikṣuṇī Thubten Damchocho</author>
                 <editor role="reviser" xml:id="UT22084-066-012-4">Norbu Samphel</editor>
                 <editor role="projectEditor" xml:id="UT22084-066-012-22">George FitzHerbert</editor>
                 <editor role="copyEditor" xml:id="UT22084-066-012-33">Dawn Collins</editor>
                 <editor role="projectEditor" xml:id="UT22084-066-012-47">Nathaniel Rich</editor>
                 <editor role="TEImarkupEditor" xml:id="UT22084-066-012-58">André Rodrigues</editor>
+                <editor role="finalReviewer" xml:id="UT22084-066-012-140">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.25 <date>2024</date>
+                <edition>v 0.0.28 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -174,6 +170,15 @@
                 <change who="#line-tofte" when="2024-03-14T15:12:49.308Z" type="text-version" status="0.0.25" xml:id="UT22084-066-012-129">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
+                <change who="#line-tofte" when="2024-03-14T15:13:47.794Z" type="text-version" status="0.0.26" xml:id="UT22084-066-012-130">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-22T11:19:24.732Z" type="text-version" status="0.0.27" xml:id="UT22084-066-012-141">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#john" when="2024-05-30T13:38:21.305Z" type="text-version" status="0.0.28" xml:id="UT22084-066-012-192">
+                    <desc>Various edits to the translation and added texts mentioned in notes to bibliography.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -183,8 +188,8 @@
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-066-012-60"/>
                 <p tid="2">While the Buddha Śākyamuni is staying in Śrāvastī, a bodhisattva named
-                    Dharmaketu asks him how many qualities a bodhisattva must possess in order to
-                    quickly reach awakening. In response, the Buddha enumerates the ten most
+                    Dharmaketu asks him what qualities a bodhisattva must possess in order to
+                    reach awakening quickly. In response, the Buddha enumerates the ten most
                     important qualities for bodhisattvas to cultivate.</p>
             </div>
             <div type="acknowledgment">
@@ -209,8 +214,8 @@
                             found in Kangyurs of the Thempangma line such as the Stok Palace
                             Kangyur, is (following the Tibetan) <title xml:lang="en">The Mahāyāna
                                 Sūtra “Dharmaketu’s Question”</title> (<title xml:lang="Bo-Ltn">’phag pa chos kyi rgyal mtshan gyis zhus pa zhes bya ba theg pa
-                                chen po’i mdo</title>) or (following the Sanskrit) <title xml:lang="en">The Mahāyāna Sūtra “Dharmaketudhvaja’s
-                                    Question”</title> (<title xml:lang="Sa-Ltn">Āryadharmaketudhvajaparipṛcchānāmamahāyānasūtra</title>). These
+                                    chen po’i mdo</title>) or (following the Sanskrit) <title xml:lang="en">The Mahāyāna Sūtra “Dharmaketu­dhvaja’s
+                                    Question”</title> (<title xml:lang="Sa-Ltn">Ārya­dharma­ketu­dhvaja­paripṛcchā­nāma­mahā­yāna­sūtra</title>). These
                             titles are also found, with only minor orthographic variation, in the
                             Narthang and Lhasa Kangyurs. Peter Skilling notes that <title xml:lang="Sa-Ltn">dhvaja</title> in the Sanskrit title is a
                                     “pleonastic” insertion (Skilling 2021, p.
@@ -220,14 +225,14 @@
                             Pali Canon were distinguished by their brevity and simplicity in
                             contrast to the Mahāyāna sūtras. See Feer 1866, p. 277.</note> While the
                         Buddha Śākyamuni is staying at Prince Jeta’s Grove in Śrāvastī, a
-                        bodhisattva named Dharmaketu asks him how many qualities a bodhisattva
+                        bodhisattva named Dharmaketu asks him what qualities a bodhisattva
                         requires to achieve full awakening. In his response, the Buddha enumerates
                         ten key qualities that must be cultivated. </p>
                     <milestone unit="chunk" xml:id="UT22084-066-012-66"/>
                     <p tid="9">As noted by Peter Skilling,<note place="end" xml:id="UT22084-066-012-67"> Skilling 2021, p. 209.</note> three of
                         these qualities—bodhicitta, never forsaking spiritual mentors, and dwelling
                         in seclusion—overlap with those also enjoined in <title xml:lang="en">The
-                            Noble Mahāyāna Sūtra on the Four Factors</title> (<title xml:lang="Sa-Ltn">Caturdharmakasūtra</title>, Toh 251, <ptr target="#UT22084-066-009-31"/>–<ptr target="#UT22084-066-009-36"/>). An additional three qualities—meditative concentration,
+                            Noble Mahāyāna Sūtra on the Four Factors</title> (<title xml:lang="Sa-Ltn">Catur­dharmaka­sūtra</title>, Toh 251, <ptr target="#UT22084-066-009-31"/>–<ptr target="#UT22084-066-009-36"/>). An additional three qualities—meditative concentration,
                         ethical conduct, and joyous effort—are among the six perfections that
                         constitute the core of the bodhisattva path. The remaining four factors are
                         faith, compassion, being learned in the Buddha’s teachings, and seeking out
@@ -263,9 +268,9 @@
                                 dpal</foreign>, “Glory of the Dharma.”</note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-066-012-73"/>
-                    <p tid="12">This translation was prepared based on the Tibetan as found in the
+                    <p tid="12">This translation is based on the Tibetan as found in the
                         Degé Kangyur, in consultation with the Comparative Edition (<title xml:lang="Bo-Ltn">dpe bsdur ma</title>) and the Stok Palace Kangyur.
-                        Where alternative readings have been preferred over the Degé version, this
+                        Where alternative readings have been preferred over the Degé version, that
                         has been recorded in the notes. </p>
                 </div>
             </div>
@@ -283,17 +288,17 @@
                     <milestone unit="chunk" xml:id="UT22084-066-012-78"/>
                     <p tid="20">Thus did I hear at one time. The Blessed One was staying at Prince
                         Jeta’s Grove, Anātha­piṇḍada’s park in Śrāvastī. At that time, a bodhisattva
-                        named Dharmaketu who was present in his retinue rose from his seat and spoke
-                        these words to the Blessed One, “Blessed One, how many qualities must
-                        bodhisattvas possess to quickly become unsurpassed, perfect, and completely
-                        awakened buddhas?”</p>
+                        named Dharmaketu who was present in his retinue rose from his seat and addressed
+                        this question to the Blessed One: “Blessed One, which are the qualities that 
+                        bodhisattvas must possess to become unsurpassed, perfect, and completely
+                        awakened buddhas quickly?”</p>
                     <milestone unit="chunk" xml:id="UT22084-066-012-79"/>
-                    <p tid="21">The Blessed One replied, “Noble child, if bodhisattvas possess ten
-                        qualities, they will quickly become unsurpassed, perfect, and completely
-                        awakened buddhas. What are the ten? They are as follows:</p>
+                    <p tid="21">The Blessed One replied, “Noble child, there are ten qualities through which 
+                        bodhisattvas who possess them will become unsurpassed, perfect, and completely
+                        awakened buddhas quickly. What are those ten? They are as follows:</p>
                     <milestone unit="chunk" xml:id="UT22084-066-012-80"/>
                     <lg tid="22">
-                        <l>Bodhisattvas have faith. </l>
+                        <l>The bodhisattvas have faith. </l>
                         <l>They have bodhicitta. </l>
                         <l>They do not forsake their spiritual mentors. </l>
                         <l>They dwell in seclusion and abandon worldly distractions. <ref cRef="F.71.a" type="folio" xml:id="UT22084-066-012-120"/>
@@ -318,8 +323,7 @@
                         <l>They are learned in many teachings. </l>
                         <l>They have meditative concentration.</l>
                         <l>They have ethical conduct.</l>
-                        <l>Through unparalleled joyous effort, they will accomplish their aims
-                            without exception.” </l>
+                        <l>Through unparalleled joyous effort, they accomplish every one of their aims.” </l>
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-066-012-82"/>
                     <p tid="23">The Blessed One spoke these words, and the bodhisattva
@@ -343,7 +347,7 @@
                     <head type="section" tid="31">Source Text</head>
                     <bibl xml:id="UT22084-066-012-86">
                         <title xml:lang="Bo-Ltn">’phags ba chos kyi
-                            rgyal mtshan gyi mdo theg pa chen po’o </title>(<title xml:lang="Sa-Ltn">Dharmaketusūtra</title>). Toh 254, Degé Kangyur vol. 66 (mdo sde, za),
+                        rgyal mtshan gyi mdo theg pa chen po’o </title>(<title xml:lang="Sa-Ltn">Dharmaketu­sūtra</title>). Toh 254, Degé Kangyur vol. 66 (mdo sde, za),
                         folios 70.b–71.a.</bibl>
                     <bibl xml:id="UT22084-066-012-87">
                         <title xml:lang="Bo-Ltn">chos kyi rgyal mtshan
@@ -355,21 +359,11 @@
                         200–201.</bibl>
                     <bibl xml:id="UT22084-066-012-88">
                         <title xml:lang="Bo-Ltn">chos kyi rgyal mtshan
-                            gyis zhus pa zhes bya ba theg pa chen po’i mdo </title>(<title xml:lang="Sa-Ltn">D</title>
-                        <title xml:lang="Sa-Ltn">harmaketudhvajaparipṛcchā</title>). Stok Palace Kangyur vol. 59 (mdo sde,
+                        gyis zhus pa zhes bya ba theg pa chen po’i mdo </title>(<title xml:lang="Sa-Ltn">Dharma­ketu­dhvaja­pari­pṛcchā</title>). Stok Palace Kangyur vol. 59 (mdo sde,
                         nya), folios 402.a–403.a.</bibl>
                 </div>
                 <div type="section" xml:id="UT22084-066-012-listBibl-3">
                     <head type="section" tid="32">Other Sources</head>
-                    <bibl xml:id="UT22084-066-012-89">
-                        <title xml:lang="Bo-Ltn">’phag pa chos bzhi pa
-                            zhes bya ba theg pa chen po’i mdo</title> (<title xml:lang="Sa-Ltn">Cāturdharmakasūtra</title>) Toh 251, Degé Kangyur vol. 66 (mdo sde,
-                        za), folios 60.b–61.a. English Translation as <title xml:lang="en">The Noble
-                            Mahāyāna Sūtra on the Four Factors</title>.</bibl>
-                    <bibl xml:id="UT22084-066-012-90">
-                        <title xml:lang="en">The Noble Mahāyāna Sūtra
-                            on the Four Factors</title>. (<title xml:lang="Sa-Ltn">Cāturdharmakasūtra</title>, Toh 251). Translated by Adam Pearcey.
-                        84000: Translating the Words of the Buddha, 2023.</bibl>
                     <bibl xml:id="UT22084-066-012-91">Butön Rinchen Drup (bu ston rin chen grub).
                             <title xml:lang="en">The Collected Works of Bu-Ston</title>. Edited by
                         Lokesh Candra. 28 vols. Śata-piṭaka Series 41–68. New Delhi: International
@@ -386,9 +380,35 @@
                         In <title xml:lang="Bo-Ltn">gsung ’bum</title> [<title xml:lang="en">Collected Works</title>], vol. 1 (ka), pp. 96–257. Lhasa: khams sprul
                         bsod nams don grub, 2006. <ref target="https://www.tbrc.org/#!rid=W00EGS1017426">BDRC
                             W00EGS1017426</ref>.</bibl>
+                    <bibl xml:id="UT22084-066-012-89">
+                        <title xml:lang="Bo-Ltn">’phag pa chos bzhi pa
+                        zhes bya ba theg pa chen po’i mdo</title> (<title xml:lang="Sa-Ltn">Cātur­dharmaka­sūtra</title>, Toh 251), Degé Kangyur vol. 66 (mdo sde,
+                        za), folios 60.b–61.a. English Translation as <title xml:lang="en">The 
+                            Mahāyāna Sūtra on the Four Factors</title>.</bibl>
+                    <bibl xml:id="UT22084-066-012-191">84000. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh68.html">Determining the 
+                        Vinaya: Upāli’s Questions</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Vinaya­viniścayopāli­paripṛcchā</title>, <title xml:lang="Bo-Ltn">’dul 
+                            ba rnam par gtan la dbab pa nye bar ’khor gyis zhus pa</title>, Toh 68). Translated by UCSB Buddhist Studies Translation Group. 
+                        84000: Translating the Words of the Buddha, 2021.</bibl>
+                    <bibl xml:id="UT22084-066-012-90">————. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh251.html">The Mahāyāna Sūtra
+                        on the Four Factors</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Cātur­dharmaka­sūtra</title>, <title xml:lang="Bo-Ltn">chos bzhi 
+                            pa zhes bya ba theg pa chen po’i mdo</title>, Toh 251). Translated by Adam Pearcey.
+                        84000: Translating the Words of the Buddha, 2023.</bibl>
+                    <bibl xml:id="UT22084-066-012-190">————. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh44-45.html">The Stem Array</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Gaṇḍavyūha</title>, <title xml:lang="Bo-Ltn">phal po che las sdong pos brgyan pa’i le’u</title>, 
+                        Toh 44–45). Translated by Peter Alan Roberts. 84000: Translating the Words of the Buddha, 2021.</bibl>
+                    <bibl xml:id="UT22084-066-012-189">————. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh176.html">The 
+                        Teaching of Vimalakīrti</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Vimala­kīrti­nirdeśa</title>, <title xml:lang="Bo-Ltn">dri 
+                            ma med par grags pas bstan pa</title>, Toh 176). Translated by Robert Thurman. 84000: Translating the Words of the Buddha, 2017.</bibl>
                     <bibl xml:id="UT22084-066-012-94">Feer, Henri Léon. “Le Sūtra des Quatre
                         Préceptes.” <title xml:lang="fr">Journal Asiatique</title>, 6,
-                        tome 8 (1866): 269-357. Reprinted in <title xml:lang="fr">Fragments Extraits du Kandiour</title>, pp. 192–198. Annales du Musée
+                        tome 8 (1866): 269-357. Reprinted in <title xml:lang="fr">Fragments Extraits du Kandjour</title>, pp. 192–198. Annales du Musée
                         Guimet 5. Paris: Ernest Leroux, 1883.</bibl>
                     <bibl xml:id="UT22084-066-012-95">
                         <title xml:lang="en">
