--- a/translations/kangyur/translations/066-012_toh254-the_sutra_of_dharmaketu.xml
+++ b/translations/kangyur/translations/066-012_toh254-the_sutra_of_dharmaketu.xml
@@ -29,7 +29,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-066-012-140">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.28 <date>2024</date>
+                <edition>v 0.0.29 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -179,6 +179,9 @@
                 <change who="#john" when="2024-05-30T13:38:21.305Z" type="text-version" status="0.0.28" xml:id="UT22084-066-012-192">
                     <desc>Various edits to the translation and added texts mentioned in notes to bibliography.</desc>
                 </change>
+                <change who="#john" when="2024-05-30T13:48:46.207Z" type="text-version" status="0.0.29" xml:id="UT22084-066-012-193">
+                    <desc>A further correction.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -293,8 +296,8 @@
                         bodhisattvas must possess to become unsurpassed, perfect, and completely
                         awakened buddhas quickly?”</p>
                     <milestone unit="chunk" xml:id="UT22084-066-012-79"/>
-                    <p tid="21">The Blessed One replied, “Noble child, there are ten qualities through which 
-                        bodhisattvas who possess them will become unsurpassed, perfect, and completely
+                    <p tid="21">The Blessed One replied, “Noble child, there are ten qualities possessing which 
+                        bodhisattvas will become unsurpassed, perfect, and completely
                         awakened buddhas quickly. What are those ten? They are as follows:</p>
                     <milestone unit="chunk" xml:id="UT22084-066-012-80"/>
                     <lg tid="22">
