--- a/translations/kangyur/translations/066-012_toh254-the_sutra_of_dharmaketu.xml
+++ b/translations/kangyur/translations/066-012_toh254-the_sutra_of_dharmaketu.xml
@@ -29,7 +29,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-066-012-140">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.29 <date>2024</date>
+                <edition>v 1.0.0 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -37,7 +37,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="2">
+                <availability status="1.a">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -50,7 +50,7 @@
                 <idno xml:id="UT22084-066-012"/>
                 <note>An early mistake in the assigning of UT numbers within the 84000 project means
                     that these ids diverge slightly from the standard logic.</note>
-                <date>2024-03-02</date>
+                <date>2024-05-30</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh254" type="text">
@@ -182,6 +182,12 @@
                 <change who="#john" when="2024-05-30T13:48:46.207Z" type="text-version" status="0.0.29" xml:id="UT22084-066-012-193">
                     <desc>A further correction.</desc>
                 </change>
+                <change who="#andre" when="2024-05-30T15:56:53.379Z" type="translation-status" status="1.a" xml:id="UT22084-066-012-194">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#andre" when="2024-05-30T15:56:53.379Z" type="text-version" status="1.0.0" xml:id="UT22084-066-012-195">
+                    <desc>First published version</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -227,7 +233,7 @@
                             Andre Vassilivič Vassilieff that the early Buddhist sūtras found in the
                             Pali Canon were distinguished by their brevity and simplicity in
                             contrast to the Mahāyāna sūtras. See Feer 1866, p. 277.</note> While the
-                        Buddha Śākyamuni is staying at Prince Jeta’s Grove in Śrāvastī, a
+                        Buddha Śākyamuni is staying at Prince Jeta’s Grove, Anātha­piṇḍada’s park in Śrāvastī, a
                         bodhisattva named Dharmaketu asks him what qualities a bodhisattva
                         requires to achieve full awakening. In his response, the Buddha enumerates
                         ten key qualities that must be cultivated. </p>
@@ -434,7 +440,7 @@
                         Kyoto: Ryukoku University, 1950.</bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded">
+            <div type="glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-066-012-125">
@@ -647,19 +653,11 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="place" xml:id="UT22084-066-012-117">
-                            <term type="translationMain">Anātha­piṇḍada’s park</term>
-                            <term xml:lang="Bo-Ltn" n="1" status="verified">mgon med zas sbyin gyi kun dga’ ra ba </term>
-                            <term xml:lang="bo" n="1">མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
-                            <term xml:lang="Sa-Ltn" status="verified" type="attestedDictionary">anātha­piṇḍadārāma</term>
-                        </gloss>
-                    </item>
-                    <item>
                         <gloss type="place" xml:id="UT22084-066-012-118">
-                            <term type="translationMain">Prince Jeta’s Grove</term>
-                            <term xml:lang="Bo-Ltn" n="1" status="verified">rgyal bu rgyal byed kyi tshal </term>
+                            <term type="translationMain">Prince Jeta’s Grove, Anātha­piṇḍada’s park</term>
+                        <term xml:lang="Bo-Ltn" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
                             <term xml:lang="bo" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
-                            <term xml:lang="Sa-Ltn" status="verified" type="attestedDictionary">jetavana</term>
+                        <term xml:lang="Sa-Ltn" status="verified" type="attestedDictionary">jetavanam anāthapiṇḍadasyārāmaḥ</term>
                         </gloss>
                     </item>
                 </list>
