--- a/translations/kangyur/translations/066-012_toh254-the_sutra_of_dharmaketu.xml
+++ b/translations/kangyur/translations/066-012_toh254-the_sutra_of_dharmaketu.xml
@@ -29,7 +29,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-066-012-140">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -188,6 +188,9 @@
                 <change who="#andre" when="2024-05-30T15:56:53.379Z" type="text-version" status="1.0.0" xml:id="UT22084-066-012-195">
                     <desc>First published version</desc>
                 </change>
+                <change who="#andre" when="2024-05-30T16:01:22.301Z" type="text-version" status="1.0.1" xml:id="UT22084-066-012-196">
+                    <desc>Glossary matching revised</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -295,8 +298,8 @@
                         <ref cRef="F.70.b" type="folio" xml:id="UT22084-066-012-119"/> Homage to all buddhas and bodhisattvas.</p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-066-012-78"/>
-                    <p tid="20">Thus did I hear at one time. The Blessed One was staying at Prince
-                        Jeta’s Grove, Anātha­piṇḍada’s park in Śrāvastī. At that time, a bodhisattva
+                    <p tid="20">Thus did I hear at one time. The Blessed One was staying in Śrāvastī, in Prince
+                        Jeta’s Grove, Anātha­piṇḍada’s park. At that time, a bodhisattva
                         named Dharmaketu who was present in his retinue rose from his seat and addressed
                         this question to the Blessed One: “Blessed One, which are the qualities that 
                         bodhisattvas must possess to become unsurpassed, perfect, and completely
