--- a/translations/kangyur/placeholders/071-006_toh292-the_great_sutra_on_the_best_banner.xml
+++ b/translations/kangyur/placeholders/071-006_toh292-the_great_sutra_on_the_best_banner.xml
@@ -14,12 +14,12 @@
                 <editor role="projectEditor" xml:id="UT22084-071-006-14">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-071-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -70,6 +70,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-31T10:23:43.49Z" type="text-version" status="0.0.9" xml:id="UT22084-071-006-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-31T11:24:37.181Z" type="translation-status" status="2.e" xml:id="UT22084-071-006-18">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-31T11:24:37.181Z" type="text-version" status="0.0.10" xml:id="UT22084-071-006-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
