--- a/translations/kangyur/placeholders/091-068_toh671-the_sovereign_tantra_in_praise_of_the_goddess_kali.xml
+++ b/translations/kangyur/placeholders/091-068_toh671-the_sovereign_tantra_in_praise_of_the_goddess_kali.xml
@@ -17,12 +17,12 @@
                 <sponsor xml:id="UT22084-091-068-13">Dakki</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.5 <date>2024</date>
+                <edition>v 0.1.6 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-091-068"/>
                 <date/>
             </publicationStmt>
@@ -62,6 +62,12 @@
                 </change>
                 <change who="#cabie-sim" when="2024-03-13T13:48:37.83Z" type="text-version" status="0.1.5" xml:id="UT22084-091-068-14">
                     <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-31T12:38:23.968Z" type="translation-status" status="2.g" xml:id="UT22084-091-068-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-31T12:38:23.968Z" type="text-version" status="0.1.6" xml:id="UT22084-091-068-16">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
