--- a/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
+++ b/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
@@ -17,13 +17,14 @@
                 <editor role="projectEditor" xml:id="UT22084-072-019-22">Rory Lindsay</editor>
                 <editor role="copyEditor" xml:id="UT22084-072-019-34">Dawn Collins</editor>
                 <editor role="projectEditor" xml:id="UT22084-072-019-47">George FitzHerbert</editor>
+                <editor role="projectEditor" xml:id="UT22084-072-019-59">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.15 <date>2024</date>
+                <edition>v 0.0.17 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-072-019"/>
                 <date/>
             </publicationStmt>
@@ -110,6 +111,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-21T10:12:36.603Z" type="text-version" status="0.0.15" xml:id="UT22084-072-019-50">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-21T10:13:07.64Z" type="text-version" status="0.0.16" xml:id="UT22084-072-019-60">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-31T13:07:45.21Z" type="translation-status" status="2.a" xml:id="UT22084-072-019-61">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-31T13:07:45.21Z" type="text-version" status="0.0.17" xml:id="UT22084-072-019-62">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
