--- a/translations/kangyur/translations/066-012_toh254-the_sutra_of_dharmaketu.xml
+++ b/translations/kangyur/translations/066-012_toh254-the_sutra_of_dharmaketu.xml
@@ -12,13 +12,14 @@
                 <title type="longTitle" xml:lang="Sa-Ltn" key="toh254">Ārya­dharma­ketu­mahā­yāna­sūtra</title>
                 <title type="longTitle" xml:lang="bo" key="toh254">འཕགས་པ་ཆོས་ཀྱི་རྒྱལ་མཚན་གྱི་མདོ་ཐེག་པ་ཆེན་པོའོ།</title>
                 <title type="longTitle" xml:lang="Bo-Ltn" key="toh254">’phags pa chos kyi rgyal mtshan gyi mdo theg pa chen po’o</title>
+                <title type="otherTitle" xml:lang="en" key="toh254">The Noble Mahāyāna Sūtra “Dharmaketu­dhvaja’s Question”</title>
                 <title type="otherTitle" xml:lang="en" key="toh254">The Mahāyāna Sūtra “Dharmaketu’s Question”</title>
                 <title type="otherTitle" xml:lang="en" key="toh254">The Noble Sūtra of Dharmaketu</title>
-                <title type="otherTitle" xml:lang="en" key="toh254">The Noble Mahāyāna Sūtra “Dharmaketu­dhvaja’s Question”</title>
                 <title type="otherTitle" xml:lang="en" key="toh254">Dharmaketu’s Question</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn" key="toh254">Ārya­dharma­ketu­dhvaja­paripṛcchā­nāma­mahā­yāna­sūtra</title>
                 <title type="otherTitle" xml:lang="bo" key="toh254">chos kyi rgyal mtshan gyis zhus pa</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn" key="toh254">’phag pa chos kyi rgyal mtshan gyis zhus pa zhes bya ba theg pa chen po’i mdo</title>
+                <author role="translatorMain" xml:id="UT22084-066-012-198">Bhikṣuṇī Thubten Damcho and team</author>
                 <consultant role="projectManager" xml:id="UT22084-066-012-2">Bhikṣuṇī Thubten Damcho</consultant>
                 <author role="translatorEng" xml:id="UT22084-066-012-3">Bhikṣuṇī Thubten Damchocho</author>
                 <editor role="reviser" xml:id="UT22084-066-012-4">Norbu Samphel</editor>
@@ -29,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-066-012-140">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -194,6 +195,12 @@
                 <change who="#konchog" when="2024-05-30T17:14:16.944Z" type="text-version" status="1.0.2" xml:id="UT22084-066-012-197">
                     <desc>Missing quotation marks inserted in main translation.</desc>
                 </change>
+                <change who="#line-tofte" when="2024-05-31T07:07:59.76Z" type="text-version" status="1.0.3" xml:id="UT22084-066-012-199">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#john" when="2024-05-31T17:18:11.611Z" type="text-version" status="1.0.4" xml:id="UT22084-066-012-200">
+                    <desc>One minor edit.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -308,8 +315,8 @@
                         bodhisattvas must possess to become unsurpassed, perfect, and completely
                         awakened buddhas quickly?”</p>
                     <milestone unit="chunk" xml:id="UT22084-066-012-79"/>
-                    <p tid="21">The Blessed One replied, “Noble child, there are ten qualities possessing which 
-                        bodhisattvas will become unsurpassed, perfect, and completely
+                    <p tid="21">The Blessed One replied, “Noble child, there are ten qualities that 
+                        bodhisattvas should possess to become unsurpassed, perfect, and completely
                         awakened buddhas quickly. What are those ten? They are as follows:</p>
                     <milestone unit="chunk" xml:id="UT22084-066-012-80"/>
                     <lg tid="22">
