--- a/translations/kangyur/placeholders/063-005_toh224-the_sutra_of_the_chapter_about_sthiradhyasa__drdhadhyasaya.xml
+++ b/translations/kangyur/placeholders/063-005_toh224-the_sutra_of_the_chapter_about_sthiradhyasa__drdhadhyasaya.xml
@@ -15,13 +15,14 @@
                 <editor role="reviser" xml:id="UT22084-063-005-3">Laura Goetz</editor>
                 <editor role="projectEditor" xml:id="UT22084-063-005-17">Nathaniel Rich</editor>
                 <editor role="projectEditor" xml:id="UT22084-063-005-18">John Canti</editor>
+                <editor role="copyEditor" xml:id="UT22084-063-005-27">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-063-005"/>
                 <date/>
             </publicationStmt>
@@ -75,6 +76,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-02T12:52:39.197Z" type="text-version" status="0.0.9" xml:id="UT22084-063-005-21">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-02T12:58:15.78Z" type="text-version" status="0.0.10" xml:id="UT22084-063-005-28">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-05T10:09:32.466Z" type="translation-status" status="2.c" xml:id="UT22084-063-005-29">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-05T10:09:32.466Z" type="text-version" status="0.0.11" xml:id="UT22084-063-005-30">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
