--- a/translations/kangyur/translations/062-015_toh215-advice_for_the_king_2.xml
+++ b/translations/kangyur/translations/062-015_toh215-advice_for_the_king_2.xml
@@ -32,7 +32,7 @@
         <editor role="finalReviewer" xml:id="UT22084-062-015-219">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.9 <date>2024</date>
+                <edition>v 1.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -40,7 +40,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="1.a">
+        <availability status="1">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -198,6 +198,12 @@
                 </change>
                 <change who="#konchog" when="2024-05-27T21:39:37.192Z" type="text-version" status="1.0.9" xml:id="UT22084-062-015-1152">
                     <desc>Several fixes in the main translation.</desc>
+                </change>
+                <change who="#sameer" when="2024-06-06T06:38:59.007Z" type="translation-status" status="1" xml:id="UT22084-062-015-1153">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-06-06T06:38:59.007Z" type="text-version" status="1.0.10" xml:id="UT22084-062-015-1154">
+                    <desc>Included in App v 3.15</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
