--- a/translations/kangyur/placeholders/088-028_toh534,861-the_incantation_the_essence_of_vairocana.xml
+++ b/translations/kangyur/placeholders/088-028_toh534,861-the_incantation_the_essence_of_vairocana.xml
@@ -13,11 +13,11 @@
                 <editor role="projectEditor" xml:id="UT22084-088-028-14">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-088-028"/>
                 <date/>
             </publicationStmt>
@@ -77,6 +77,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-06T13:01:43.63Z" type="text-version" status="0.0.8" xml:id="UT22084-088-028-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-06T14:43:35.229Z" type="translation-status" status="2.e" xml:id="UT22084-088-028-18">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-06T14:43:35.229Z" type="text-version" status="0.0.9" xml:id="UT22084-088-028-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
