--- a/translations/kangyur/placeholders/088-029_toh535,868-recollecting_the_names_of_candraprabha.xml
+++ b/translations/kangyur/placeholders/088-029_toh535,868-recollecting_the_names_of_candraprabha.xml
@@ -13,11 +13,11 @@
                 <editor role="projectEditor" xml:id="UT22084-088-029-14">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-088-029"/>
                 <date/>
             </publicationStmt>
@@ -77,6 +77,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-01T13:35:26.307Z" type="text-version" status="0.0.8" xml:id="UT22084-088-029-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-06T14:46:57.235Z" type="translation-status" status="2.e" xml:id="UT22084-088-029-18">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-06T14:46:57.235Z" type="text-version" status="0.0.9" xml:id="UT22084-088-029-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
