--- a/translations/kangyur/placeholders/088-030_toh536,869-recollecting_the_common_essence_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/088-030_toh536,869-recollecting_the_common_essence_of_the_tathagatas.xml
@@ -14,11 +14,11 @@
                 <editor role="projectEditor" xml:id="UT22084-088-030-14">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-088-030"/>
                 <date/>
             </publicationStmt>
@@ -78,6 +78,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-01T13:42:09.797Z" type="text-version" status="0.0.8" xml:id="UT22084-088-030-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-06T14:47:52.463Z" type="translation-status" status="2.e" xml:id="UT22084-088-030-18">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-06T14:47:52.463Z" type="text-version" status="0.0.9" xml:id="UT22084-088-030-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
