--- a/translations/kangyur/placeholders/088-031_toh537,870-recollecting_the_names_of_buddha_sikhin.xml
+++ b/translations/kangyur/placeholders/088-031_toh537,870-recollecting_the_names_of_buddha_sikhin.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-088-031-14">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-088-031"/>
                 <date/>
             </publicationStmt>
@@ -80,6 +80,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-01T13:44:45.247Z" type="text-version" status="0.0.8" xml:id="UT22084-088-031-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-06T14:48:51.739Z" type="translation-status" status="2.e" xml:id="UT22084-088-031-18">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-06T14:48:51.739Z" type="text-version" status="0.0.9" xml:id="UT22084-088-031-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
