--- a/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
+++ b/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
@@ -14,12 +14,12 @@
                 <editor role="projectEditor" xml:id="UT22084-088-032-15">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-088-032"/>
                 <date/>
             </publicationStmt>
@@ -82,6 +82,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-01T13:47:26.297Z" type="text-version" status="0.0.9" xml:id="UT22084-088-032-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-06T14:49:50.422Z" type="translation-status" status="2.e" xml:id="UT22084-088-032-19">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-06T14:49:50.422Z" type="text-version" status="0.0.10" xml:id="UT22084-088-032-20">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
