--- a/translations/kangyur/translations/061-005_toh185-the_sutra_teaching_the_deployment_of_the_inconceivable_qualities_and_gnosis_of_the_tathagatas_on_their_objects.xml
+++ b/translations/kangyur/translations/061-005_toh185-the_sutra_teaching_the_deployment_of_the_inconceivable_qualities_and_gnosis_of_the_tathagatas_on_their_objects.xml
@@ -24,7 +24,7 @@
                 <sponsor xml:id="UT22084-061-005-807">Make and Wang Xiao Juan (馬珂和王曉娟)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.21 <date>2024</date>
+                <edition>v 1.0.22 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -187,6 +187,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-01-12T17:49:30.722Z" type="text-version" status="1.0.21" xml:id="UT22084-061-005-855">
                     <desc>update from revisions.</desc>
+                </change>
+                <change who="#john" when="2024-06-06T19:33:45.362Z" type="text-version" status="1.0.22" xml:id="UT22084-061-005-856">
+                    <desc>Minor edits concerning names of gems.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -645,8 +648,8 @@
                                                 the Tathāgata’s body as being countless hundreds of thousands of leagues tall.</p>
                                         <milestone unit="chunk" xml:id="UT22084-061-005-69"/>
                                         <p tid="50">“Some within this retinue see the Tathāgata’s body as golden in color. Others observe that it is the color of a
-                                                precious lapis lazuli jewel, others as the color of a great jewel of sapphire, others as the color of a great
-                                                gem of azure, others as the color of a jewel of starlight, others as the color of a jewel of precious ruby,
+                                                precious beryl jewel, others as the color of a great jewel of sapphire, others as the color of a great
+                                                azure gem, others as the color of a jewel of starlight, others as the color of a jewel of precious ruby,
                                                 others as the color of the precious jewel held by Śakra, others as the color of a precious, shining diamond,
                                                 others as the color of a precious jewel that shines like all the gods, others as the color of a precious jewel
                                                 that shines like the sun and moon, others as the color of a precious water-purifying gem, others as the color of
@@ -702,16 +705,17 @@
                                                 Tathāgata. Even though, Mañjuśrī, the Tathāgata does not think or conceptualize, still the Tathāgata’s deeds
                                                 spontaneously occur in this manner.</p>
                                         <milestone unit="chunk" xml:id="UT22084-061-005-77"/>
-                                        <p tid="58">“For example, Mañjuśrī, there exists a form of azure gem that changes colors if it is placed on different colored
-                                                cloth. If, Mañjuśrī, the azure gem is placed on a yellow cloth, the azure gem turns yellow. If placed on a red
+                                        <p tid="58">“For example, Mañjuśrī, there exists a form of the gem beryl that changes colors if it is placed on different colored
+                                                cloth. If, Mañjuśrī, the beryl is placed on a yellow cloth, the beryl turns yellow. If placed on a red
                                                 cloth, it turns red. If placed on a blue cloth, it turns blue. Thus, it assumes precisely the color of whatever
-                                                cloth onto which it is placed. <ref cRef="F.117.b" type="folio" xml:id="UT22084-061-005-738"/> Yet, Mañjuśrī, the azure gem does not think or conceptualize. Rather,
+                                                cloth onto which it is placed. <ref cRef="F.117.b" type="folio" xml:id="UT22084-061-005-738"/> Yet, Mañjuśrī, the beryl 
+                                            does not think or conceptualize. Rather,
                                                 such activity occurs spontaneously and nonconceptually.</p>
                                         <milestone unit="chunk" xml:id="UT22084-061-005-78"/>
                                         <p tid="59">“In the same way, the Tathāgata assumes different hues because sentient beings are different. If, Mañjuśrī, sentient
                                                 beings are best instructed by seeing the Tathāgata’s body as golden in color, then they see the Tathāgata’s body
-                                                as golden. If sentient beings are best instructed through a color similar to that of an azure gem, they see the
-                                                Tathāgata’s body as the color of an azure gem. If sentient beings are best instructed by a color resembling a
+                                                as golden. If sentient beings are best instructed through a color similar to that of a gem of beryl, they see the
+                                                Tathāgata’s body as the color of a gem of beryl. If sentient beings are best instructed by a color resembling a
                                                 pearl, they see the Tathāgata’s body as the color of a pearl. If sentient beings are best instructed by a color
                                                 resembling a sapphire, they see the Tathāgata’s body as the color of a sapphire. Mañjuśrī, if sentient beings
                                                 are best instructed by a color resembling a special sapphire, they see the Tathāgata’s body as the color of a
@@ -747,8 +751,8 @@
                                                 miraculously; and born with form or without form, with or without conception, or with neither conception nor
                                                 nonconception, the tathāgatas do not think or conceptualize:</p>
                                         <milestone unit="chunk" xml:id="UT22084-061-005-83"/>
-                                        <p tid="64">‘While these sentient beings see me as golden in hue, may they not see me as the color of an azure gem. While these
-                                                sentient beings see me as the color of an azure gem, may they not see me as the color of a sapphire. While these
+                                        <p tid="64">‘While these sentient beings see me as golden in hue, may they not see me as the color of gem of beryl. While these
+                                                sentient beings see me as the color of a gem of beryl, may they not see me as the color of a sapphire. While these
                                                 sentient beings see me as the color of a pink sapphire, may they not see me as the color of a blue sapphire.
                                                 While these sentient beings see me as the color of a blue sapphire, may they not see me as the color of a jewel
                                                 that captures all lights. While these sentient beings see me as the color of a jewel that captures all lights,
