--- a/translations/kangyur/placeholders/071-006_toh292-the_great_sutra_on_the_best_banner.xml
+++ b/translations/kangyur/placeholders/071-006_toh292-the_great_sutra_on_the_best_banner.xml
@@ -12,14 +12,15 @@
                 <author role="translatorMain" xml:id="UT22084-071-006-4">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-071-006-5">Lowell Cook</author>
                 <editor role="projectEditor" xml:id="UT22084-071-006-14">George FitzHerbert</editor>
+                <editor role="copyEditor" xml:id="UT22084-071-006-23">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-071-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -76,6 +77,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-31T11:24:37.181Z" type="text-version" status="0.0.10" xml:id="UT22084-071-006-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-31T11:25:21.366Z" type="text-version" status="0.0.11" xml:id="UT22084-071-006-24">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-07T09:33:36.393Z" type="translation-status" status="2.a" xml:id="UT22084-071-006-25">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-07T09:33:36.393Z" type="text-version" status="0.0.12" xml:id="UT22084-071-006-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
