--- a/translations/kangyur/placeholders/071-007_toh293-the_great_sutra_on_the_best_banner.xml
+++ b/translations/kangyur/placeholders/071-007_toh293-the_great_sutra_on_the_best_banner.xml
@@ -4,7 +4,7 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="en">The Great Sūtra on the Best Banner (2)</title>
+                <title type="mainTitle" xml:lang="en">The Mahāsūtra “The Best Banner” (2)</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Dhvajāgramahāsūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mdo chen po rgyal mtshan dam pa/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Dhvajāgranāmamahāsūtraṃ</title>
@@ -15,13 +15,14 @@
                 <editor role="copyEditor" xml:id="UT22084-071-007-4">Laura Goetz</editor>
                 <editor role="projectEditor" xml:id="UT22084-071-007-29">Andreas Doctor</editor>
                 <editor role="projectEditor" xml:id="UT22084-071-007-36">John Canti</editor>
+                <editor role="projectEditor" xml:id="UT22084-071-007-47">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.17 <date>2023</date>
+                <edition>v 0.0.20 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-071-007"/>
                 <date/>
             </publicationStmt>
@@ -108,6 +109,18 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-30T14:07:23.445Z" type="text-version" status="0.0.17" xml:id="UT22084-071-007-39">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#john" when="2024-05-15T17:21:37.722Z" type="text-version" status="0.0.18" xml:id="UT22084-071-007-40">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-31T10:26:52.79Z" type="text-version" status="0.0.19" xml:id="UT22084-071-007-48">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-07T09:42:36.918Z" type="translation-status" status="2.a" xml:id="UT22084-071-007-49">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-07T09:42:36.918Z" type="text-version" status="0.0.20" xml:id="UT22084-071-007-50">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
