--- a/translations/kangyur/placeholders/059-001_toh158-the_sutra_of_the_questions_of_brahma.xml
+++ b/translations/kangyur/placeholders/059-001_toh158-the_sutra_of_the_questions_of_brahma.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-059-001-21">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-059-001"/>
                 <date/>
             </publicationStmt>
@@ -82,6 +82,12 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-08T11:51:07.058Z" type="text-version" status="0.0.10" xml:id="UT22084-059-001-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-07T10:58:47.166Z" type="translation-status" status="2.d" xml:id="UT22084-059-001-27">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-07T10:58:47.166Z" type="text-version" status="0.0.11" xml:id="UT22084-059-001-28">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
