--- a/translations/kangyur/placeholders/081-009_toh440-the_tantra_of_mahakala.xml
+++ b/translations/kangyur/placeholders/081-009_toh440-the_tantra_of_mahakala.xml
@@ -16,12 +16,12 @@
                 <sponsor xml:id="UT22084-081-009-4">Lina Herlintje</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.8 <date>2023</date>
+                <edition>v 0.1.9 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-081-009"/>
                 <date/>
             </publicationStmt>
@@ -73,6 +73,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.1.8" xml:id="UT22084-081-009-16">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-07T11:18:50.344Z" type="translation-status" status="2.g" xml:id="UT22084-081-009-17">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-07T11:18:50.344Z" type="text-version" status="0.1.9" xml:id="UT22084-081-009-18">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
