--- a/translations/kangyur/placeholders/071-006_toh292-the_great_sutra_on_the_best_banner.xml
+++ b/translations/kangyur/placeholders/071-006_toh292-the_great_sutra_on_the_best_banner.xml
@@ -13,9 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-071-006-5">Lowell Cook</author>
                 <editor role="projectEditor" xml:id="UT22084-071-006-14">George FitzHerbert</editor>
                 <editor role="copyEditor" xml:id="UT22084-071-006-23">Laura Goetz</editor>
+                <editor role="projectEditor" xml:id="UT22084-071-006-31">Andreas Doctor</editor>
+                <editor role="TEImarkupEditor" xml:id="UT22084-071-006-32">Martina Cotter</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -87,6 +89,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-06-07T09:33:36.393Z" type="text-version" status="0.0.12" xml:id="UT22084-071-006-26">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-07T09:37:15.376Z" type="text-version" status="0.0.13" xml:id="UT22084-071-006-33">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#john" when="2024-06-07T14:07:31.113Z" type="text-version" status="0.0.14" xml:id="UT22084-071-006-34">
+                    <desc>User set version to 0.0.14</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
