--- a/translations/kangyur/placeholders/071-007_toh293-the_great_sutra_on_the_best_banner.xml
+++ b/translations/kangyur/placeholders/071-007_toh293-the_great_sutra_on_the_best_banner.xml
@@ -16,9 +16,10 @@
                 <editor role="projectEditor" xml:id="UT22084-071-007-29">Andreas Doctor</editor>
                 <editor role="projectEditor" xml:id="UT22084-071-007-36">John Canti</editor>
                 <editor role="projectEditor" xml:id="UT22084-071-007-47">George FitzHerbert</editor>
+                <editor role="TEImarkupEditor" xml:id="UT22084-071-007-58">Martina Cotter</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.20 <date>2024</date>
+                <edition>v 0.0.22 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -122,6 +123,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-06-07T09:42:36.918Z" type="text-version" status="0.0.20" xml:id="UT22084-071-007-50">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-07T09:43:49.815Z" type="text-version" status="0.0.21" xml:id="UT22084-071-007-59">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#john" when="2024-06-07T14:08:45.202Z" type="text-version" status="0.0.22" xml:id="UT22084-071-007-60">
+                    <desc>User set version to 0.0.22</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
